<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.androidtutorialshub.loginregister.activities.campus"
    tools:showIn="@layout/app_bar_campus"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back"
        android:padding="16dp"
        >

        <VideoView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="260dp">
            android:layout_centerInParent="true"

        </VideoView>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/video"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"
            android:padding="16dp"
            android:text="@string/mission"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:textColor="@android:color/holo_red_dark"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView5"
            android:layout_centerVertical="true"

            android:padding="16dp"
            android:text="@string/para3"
            android:textColor="#b71c1c" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_centerVertical="true"

            android:padding="16dp"
            android:text="@string/para1"
            android:textColor="#b71c1c" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:layout_centerVertical="true"

            android:padding="16dp"
            android:text="@string/para2"
            android:textColor="#b71c1c" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_centerVertical="true"

            android:padding="16dp"
            android:text="@string/para4"
            android:textColor="#b71c1c" />





    </RelativeLayout>

</ScrollView>
